--- a/klinta project regular/css/header.css
+++ b/klinta project regular/css/header.css
@@ -1,5 +1,6 @@
-*{box-sizing: border-box;    
-    /* border: none !important; */
+*{
+  box-sizing: border-box;    
+    border: none !important;
     border: 1px solid blue;
 }  
   
